# crewai-project-v2

./: pyproject.toml
src/crewai_project/: crew.py  main.py
src/crewai_project/config/: agents.yaml  tasks.yaml
