[project]
name = "crewai-project"
version = "0.1.0"
description = "crewai-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools,google-genai]==1.10.1"
]

[project.scripts]
crewai = "crewai_project.main:run"
run_crew = "crewai_project.main:run"
train = "crewai_project.main:train"
replay = "crewai_project.main:replay"
test = "crewai_project.main:test"
run_with_trigger = "crewai_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
